build/log/idf_py_stderr_output_137445
Command: make -j 14 all
/home/catperson/esp/morse_code/main/main.c: In function 'submit_get_handler':
/home/catperson/esp/morse_code/main/main.c:58:32: error: invalid use of void expression
   58 |   play_morse_text((char *)req, morse_beep(600));
      |                                ^~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5191: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
